# intro_rust

./: .gitignore  Cargo.toml  LICENSE  README.md  ToDo.md
basics/: Cargo.toml
basics/src/: box_and_closure.rs  configuration_conditional.rs  defining_traits.rs  execute_commands.rs  generic_iterators.rs  generic_stuff.rs  lifetime_parameter.rs  lifetime_pointer.rs  macros.rs  main.rs  ownership_barrowing.rs  primitive_types.rs  result_and_option.rs  some_cool_features.rs  stack_and_box_stuff.rs  threads_channels.rs  threads_mutexes.rs  usefull_traits.rs
testlibrary/: Cargo.toml
testlibrary/src/: lib.rs
